# droptables

./: Cargo.toml  README.md
benches/: droptable.rs
droptables_macros/: Cargo.toml
droptables_macros/src/: lib.rs  uniform.rs
examples/: godrolls.rs  multi.rs  osrs.rs  rarity.rs
src/: error.rs  lib.rs  sampler.rs  staticdt.rs  uniform.rs  walker.rs
