[package]
name = "droptables"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
droptables_macros = { path = "droptables_macros" }

[dev-dependencies]
criterion = "0.5"
rand = "0.9.2"                # already a normal dep; keep here for benches too
rand_pcg = "0.9.0"
droptables_macros = { path = "droptables_macros" }   # for the derive in benches

[[bench]]
name = "droptable"
harness = false
